--- a/src/fxml/segundaTela.fxml
+++ b/src/fxml/segundaTela.fxml
@@ -26,8 +26,8 @@
             <Button fx:id="buttonBuscarTarefa" layoutX="240.0" layoutY="53.0" mnemonicParsing="false" onAction="#handleButtonBuscarTarefa" prefHeight="37.0" prefWidth="41.0" style="-fx-background-color: #2f5d75; -fx-background-radius: 20;" text="🔎 " textFill="WHITE" />
          </children>
       </AnchorPane>
-      <Button fx:id="buttonTarefasPendentes" alignment="TOP_LEFT" layoutX="47.0" layoutY="648.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="216.0" style="-fx-background-color: ebf1f5; -fx-background-radius: 5;" text="Tarefas não realizadas" />
-      <Button fx:id="buttonTarefasRealizadas" alignment="TOP_LEFT" layoutX="47.0" layoutY="596.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="216.0" style="-fx-background-color: ebf1f5; -fx-background-radius: 5;" text="Tarefas realizadas" />
+      <Button fx:id="buttonTarefasPendentes" alignment="TOP_LEFT" layoutX="47.0" layoutY="648.0" mnemonicParsing="false" onAction="#handleButtonTarefasNaoRealizadas" prefHeight="31.0" prefWidth="216.0" style="-fx-background-color: ebf1f5; -fx-background-radius: 5;" text="Tarefas não realizadas" />
+      <Button fx:id="buttonTarefasRealizadas" alignment="TOP_LEFT" layoutX="47.0" layoutY="596.0" mnemonicParsing="false" onAction="#handleButtonTarefasRealizadas" prefHeight="31.0" prefWidth="216.0" style="-fx-background-color: ebf1f5; -fx-background-radius: 5;" text="Tarefas realizadas" />
       <Line endX="125.0" layoutX="160.0" layoutY="570.0" startX="-132.0" stroke="#aba4a4" />
       <Button fx:id="buttonLazer" alignment="TOP_LEFT" layoutX="47.0" layoutY="510.0" mnemonicParsing="false" onAction="#handleButtonCategoria" prefHeight="31.0" prefWidth="216.0" style="-fx-background-color: ebf1f5; -fx-background-radius: 5;" text="Lazer" />
       <Button fx:id="buttonCasa" alignment="TOP_LEFT" layoutX="47.0" layoutY="457.0" mnemonicParsing="false" onAction="#handleButtonCategoria" prefHeight="31.0" prefWidth="216.0" style="-fx-background-color: ebf1f5; -fx-background-radius: 5;" text="Casa" />
